--- a/courses/RB175/book_viewer/views/home.erb
+++ b/courses/RB175/book_viewer/views/home.erb
@@ -21,11 +21,12 @@
       <div id="menu">
           <div class="pure-menu">
               <a class="pure-menu-heading" href="/">Table of Contents</a>
-
               <ul class="pure-menu-list">
-                <li class="pure-menu-item">
-                  <a href="#" class="pure-menu-link">Chapter 1</a>
-                </li>
+                <% @chapter_titles.each do |chapter| %>
+                  <li class='pure-menu-item'>
+                    <a href='#' class='pure-menu-link'><%= chapter %></a>
+                  </li>
+                <% end %>
               </ul>
           </div>
       </div>
@@ -38,12 +39,13 @@
 
         <div class="content">
           <h2 class="content-subhead">Table of Contents</h2>
-
           <div class="pure-menu">
             <ul class="pure-menu-list">
-              <li class="pure-menu-item">
-                <a href="#" class="pure-menu-link">Chapter 1</a>
-              </li>
+              <% @chapter_titles.each do |chapter| %>
+                <li class='pure-menu-item'>
+                  <a href='#' class='pure-menu-link'><%= chapter %></a>
+                </li>
+              <% end %>
             </ul>
           </div>
         </div>
