Challenge: Refactor logic from template to app

--- a/courses/RB175/dynamic_directory_index/views/home.erb
+++ b/courses/RB175/dynamic_directory_index/views/home.erb
@@ -6,16 +6,10 @@
   <body>
     <h1>Directory File Index</h1>
     <a href="/?sort=ascending">Ascending</a>
-    <a href="/?sort=decending">Descending</a>
+    <a href="/?sort=descending">Descending</a>
     <ul>
-      <% if @sort == "ascending" %>
-        <% @ressource_list.each do |ressource| %>
-          <li><a href="<%= ressource.path %>"><%= ressource.name %></a></li>
-        <% end %>
-      <% else %>
-        <% @ressource_list.reverse_each do |ressource| %>
-          <li><a href="<%= ressource.path %>"><%= ressource.name %></a></li>
-        <% end %>
+      <% @ressource_list.each do |ressource| %>
+        <li><a href="<%= ressource.path %>"><%= ressource.name %></a></li>
       <% end %>
     </ul>
   </body>
